2006-12-01  Florian Boor <florian@kernelconcepts.de>

        * documentation/index.phtml: Add API documentation index.

2006-11-29  Florian Boor <florian@kernelconcepts.de>

	* Remove all remaining traces of head.shtml.

2006-11-24  Florian Boor <florian@kernelconcepts.de>

	* style.css: Improve news display.

2006-11-23  Florian Boor <florian@kernelconcepts.de>

	* linkres.phtml: Update links to point to new wiki.
	* css/style.css: Add some more modern CSS love.
	* include/*: Some minor design improvements.
	* include/menu.php, svn.phtml, download.phtml:
	Merge svn and download pages.
	* template.html: Minor design improvement.

2006-11-22  Florian Boor <florian@kernelconcepts.de>

	* index.phtml: Add more motivations.

2006-11-17  Florian Boor <florian@kernelconcepts.de>

	* linkres.phtml: Update Nils email address, update some links.
	* projects/*: remove obsolete files and change mailinglist
          to the new one.
          Update CVS->SVN
          Include same page header like main website.

2006-11-09  Florian Boor <florian@kernelconcepts.de>

	* Fix link and add information about how to join the project.

2006-10-13  Florian Boor <florian@kernelconcepts.de>

	* cvs.phtml: Rename to svn.phtml and update to new locations, 
	  names and modern standards. 
	* Update menu

2006-10-12  Florian Boor <florian@kernelconcepts.de>
	
	* documentation.phtml: Add link to compiled docbook user manual.
	* Update to LinuxToGo location, add rss conversion template
	  and new site logo. Change index to fit new needs.

2006-09-19  Florian Boor <florian@kernelconcepts.de>
	
	* documentation.phtml: Some cleanup and polishing. Add links to
          compiled docbook documentation.

2006-08-27  Florian Boor <florian@kernelconcepts.de>

	* Additional projects documentation (gpe-mini-browser, gpe-confd,
          gpe-soundbite, gpe-gallery, gpe-filemanager, gpe-sketchbook).
	* Several minor bugfixes and updates.

2006-08-24  Florian Boor <florian@kernelconcepts.de>
