@@ -9,50 +9,30 @@ include ("includes/head.php");
 
 <h2>About GPE</h2>
 
-<table width=100%>
-<td>
-The GPE Palmtop Environment provides a user interface environment for 
-palmtop / handheld computers running the GNU/Linux or any other UNIX-like 
-operating system. 
-</td>
-<td rowspan=4>
-<img src="http://www.linuxtogo.org/~florian/img/gpe-main.jpg" alt="GPE in use"></img>
-</td>
-</tr>
-<tr>
-<td>
-GPE is not a single piece of software, but an entire environment of components
-which make it possible to use your GNU/Linux handheld for standard tasks such 
-as Personal Information Management (PIM), network access and multimedia 
-and various other purposes. Apart from its main focus to provide a GUI 
-environment for palmtop / handheld computers it is useful on all sorts of mobile
-devices with only limited resources. One of the major goals is to encourage 
-people to work on free software for mobile devices and to experiment with new 
-technologies.
-</td>
-</tr>
-<tr>
-<td>
-In addition GPE provides an infrastructure for both easy and powerful application 
-development and good compatibility to existing desktop solutions. GPE uses the 
-<A href="http://freedesktop.org/Software/xorg">X Window System</A>, 
-and the <A href="http://www.gtk.org/">GTK+ widget toolkit</A>. 
-Besides providing core software such as shared libraries, and perhaps more 
-importantly, the GPE environment defines standards for program design and 
-interaction. It is based on the C programming language and other common 
-standards such as SQL, XML, DBUS.
-</td>
-</tr>
-</table>
-<p>
-GPE is committed to the <a href="http://www.opensource.org/">Open Source</a>
-idea. All GPE core components are released under
-<a href="http://www.gnu.org/">GNU</a>
-<a href="http://www.gnu.org/licenses/licenses.html">licenses</a>, applications
-using the <a href="http://www.gnu.org/licenses/gpl.html">GPL</a> and shared
-libraries using the <a href="http://www.gnu.org/licenses/lgpl.html">LGPL</a>.
-Those allow for the most free usability of the GPE system.
-</p>
+<p>The GPE Palmtop Environment (GPE) is a collection of integrated
+software components optimized for (but not limited to) handheld and
+other input constrained and resource limited devices.  <a
+href="projects/">GPE provides</a> PIM (<a
+href="projects/GPE-calendar.shtml">calendaring</a>, <a
+href="projects/GPE-todo.shtml">todo management</a>, <a
+href="projects/GPE-Contacts.shtml">contact management</a> and <a
+href="projects/gpe-sketchbook.shtml">note taking</a>), Multimedia (<a
+href="projects/starling.shtml">audio playback</a> and <a
+href="projects/gpe-gallery.shtml">image viewing</a>) and connectivity
+solutions (<a href="projects/gpe-mini-browser.shtml">web
+browsing</a>).  <img src="imgages/gpe-in-use.jpg" alt="GPE in use"
+align="right"> </p>
+
+<p>GPE provides an infrastructure for easy and powerful application
+development by building on available technology including GTK+,
+SQLite, DBUS and GStreamer.</p>
+
+<p>GPE software is released under either the <a
+href="http://www.gnu.org/">GNU</a> <a
+href="http://www.gnu.org/licenses/gpl.html">GPL</a> or <a
+href="http://www.gnu.org/licenses/lgpl.html">LGPL</a>.  Check the
+COPYING file in a particular package to determine its exact licensing
+terms.</p>
 
 <h2>News</h2>
 <p>
