@@ -1,3 +1,9 @@
+2007-01-02  Neal H. Walfield  <neal@gnu.org>
+
+	* images/gpe-in-use.jpg: New file.
+	* index.phtml: Use it and improve text.
+	* includes/menu.php: Add development link and shorten some titles.
+	
 2006-12-01  Florian Boor <florian@kernelconcepts.de>
 
         * documentation/index.phtml: Add API documentation index.
